--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,11 @@ body {
     flex-direction: column;
 }
 
-
+.sml-btn {
+    --bs-btn-padding-y: .25rem;
+    --bs-btn-padding-x: .5rem;
+    --bs-btn-font-size: .75rem;
+}
 
 div {
     margin-bottom: 0.5%;
@@ -21,4 +25,6 @@ main {
 footer {
     margin-top: auto;
 }
+
+
 
